--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@ include('bd.html');
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
                                 data-tippy="Close" data-tippy-inertia="true" data-tippy-animation="shift-away"
                                 data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
+                                <span aria-hidden="true">&times;</span>
+
                             </button>
                         </div>
                         <div class="modal-body">
@@ -352,7 +354,8 @@ include('bd.html');
                                                 <div class="expand-width" data-depth="0.2" style="display: flex;
                                                 align-items: center;
                                                 justify-content: center;">
-                                                    <img src="./assets/images/banner/author (1).png" alt="" class="author-logo">
+                                                    <img src="./assets/images/banner/author (1).png" alt=""
+                                                        class="author-logo">
                                                 </div>
                                             </div>
                                         </div>
@@ -361,7 +364,7 @@ include('bd.html');
                             </div>
                         </div>
                     </div>
-                 
+
                 </div>
             </div>
 
