--- a/my-account.html
+++ b/my-account.html
@@ -5,9 +5,11 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Кинезиолог Никита Янушанец. Лечение остеохондроза, сколиоза, головных болей, аллергии, заиканий и астмы</title>
+    <title>Кинезиолог Никита Янушанец. Лечение остеохондроза, сколиоза, головных болей, аллергии, заиканий и астмы
+    </title>
     <meta name="robots" content="index, follow" />
-    <meta name="description" content="Pronia plant store bootstrap 5 template is an awesome website template for any home plant shop.">
+    <meta name="description"
+        content="Pronia plant store bootstrap 5 template is an awesome website template for any home plant shop.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/favicon-32x32.png">
@@ -49,7 +51,6 @@
 
         <!-- Begin Main Header Area -->
         <header class="main-header-area">
-
             <div class="header-top bg-pronia-primary d-none d-lg-block">
                 <div class="container">
                     <div class="row align-items-center">
@@ -69,7 +70,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="header-middle py-30">
                 <div class="container">
 
@@ -77,9 +77,7 @@
                         <div class="col-lg-12">
                             <div class="header-middle-wrap position-relative">
                                 <div class="header-contact d-none d-lg-flex">
-                                    <!-- <i class="pe-7s-call"></i> -->
-                                    <a href="index.html"><img src="./assets/images/banner/logo.png"
-                                            alt=""></a>
+                                    <a href="index.html"><img src="./assets/images/banner/logo.png" alt=""></a>
                                 </div>
                                 <nav class="main-nav">
                                     <ul>
@@ -255,6 +253,8 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
                                 data-tippy="Close" data-tippy-inertia="true" data-tippy-animation="shift-away"
                                 data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
+                                <span aria-hidden="true">&times;</span>
+
                             </button>
                         </div>
                         <div class="modal-body">
@@ -342,7 +342,7 @@
             </div>
             <div class="global-overlay"></div>
         </header>
-     
+
         <main class="main-content main-account">
             <div class="row mx-auto container">
                 <div class="col-sm-12 mt-5">
@@ -353,7 +353,8 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Приобрести побписку на месяц</h5>
-                            <p class="card-text"> При покупке этой подписки, Вам будет доступен видеоматериа в течение одного месяца.
+                            <p class="card-text"> При покупке этой подписки, Вам будет доступен видеоматериа в течение
+                                одного месяца.
                             </p>
                             <a href="#" class="btn btn-success">Купить</a>
                         </div>
@@ -374,7 +375,8 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Приобрести побписку на год</h5>
-                            <p class="card-text"> При покупке этой подписки, Вам будет доступен видеоматериа в течение одного года.
+                            <p class="card-text"> При покупке этой подписки, Вам будет доступен видеоматериа в течение
+                                одного года.
                             </p>
                             <a href="#" class="btn btn-success">Купить</a>
                         </div>
