--- a/cart.html
+++ b/cart.html
@@ -55,27 +55,6 @@ include('bd.html');
     <div class="main-wrapper">
 
         <header class="main-header-area">
-
-            <!-- <div class="header-top bg-pronia-primary d-none d-lg-block">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-11">
-                            <div class="header-top-left">
-                                <span class="pronia-offer">
-                                    Привет, USER!</span>
-                            </div>
-                        </div>
-                        <div class="col-lg-1">
-                            <span title="LogOut">
-                                <a href="#" class="search-btn bt bt-logout">
-                                    <i class="pe-7s-right-arrow"></i>
-                                </a>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-
             <div class="header-middle py-30">
                 <div class="container">
 
@@ -83,7 +62,6 @@ include('bd.html');
                         <div class="col-lg-12">
                             <div class="header-middle-wrap position-relative">
                                 <div class="header-contact d-none d-lg-flex">
-                                    <!-- <i class="pe-7s-call"></i> -->
                                     <a href="index.html"><img src="./assets/images/banner/logo.png" alt=""></a>
                                 </div>
                                 <nav class="main-nav">
@@ -260,6 +238,8 @@ include('bd.html');
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
                                 data-tippy="Close" data-tippy-inertia="true" data-tippy-animation="shift-away"
                                 data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
+                                <span aria-hidden="true">&times;</span>
+
                             </button>
                         </div>
                         <div class="modal-body">
