--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
     </div>
     <div class="main-wrapper">
 
-        <header class="main-header-area">
+        <header class="main-header-area" id="header">
             <div class="header-middle py-30">
                 <div class="container">
 
@@ -66,7 +66,7 @@
                                             <a href="index.html">Главная</a>
                                         </li>
                                         <li class="drop-holder">
-                                            <a href="blog.html">Обучение</a>
+                                            <a href="index.html#education">Справочный материал</a>
                                         </li>
                                         <li>
                                             <a href="contact.html">Контакты</a>
@@ -94,13 +94,6 @@
                                                 </li>
                                             </ul>
                                         </li>
-                                        <!-- <li title="LogOut">
-                                            <a href="#" class="search-btn bt">
-                                                <i class="pe-7s-right-arrow"></i>
-                                            </a>
-                                        </li> -->
-
-
                                         <li class="mobile-menu_wrap d-block d-lg-none">
                                             <a href="#mobileMenu" class="mobile-menu_btn toolbar-btn pl-0">
                                                 <i class="pe-7s-menu"></i>
@@ -114,52 +107,49 @@
                 </div>
             </div>
 
-            <div class="header-sticky py-4 py-lg-0">
+            <div class="header-sticky py-1 py-lg-1">
                 <div class="container">
-                    <div class="header-nav position-relative">
-                        <div class="row align-items-center">
-                            <div class="col-lg-6 d-none d-lg-block">
-                                <div class="main-menu">
-                                    <nav class="main-nav">
-                                        <ul>
-                                            <li class="drop-holder">
-                                                <a href="index.html">Главная</a>
-                                            </li>
 
-                                            <li class="drop-holder">
-                                                <a href="blog.html">Обучение</a>
-
-                                            </li>
-                                            <li>
-                                                <a href="contact.html">Контакты</a>
-                                            </li>
-                                        </ul>
-                                    </nav>
+                    <div class="row align-items-center">
+                        <div class="col-lg-12">
+                            <div class="header-middle-wrap position-relative">
+                                <div class="header-contact d-none d-lg-flex">
+                                    <a href="index.html"><img src="./assets/images/banner/logo.png" alt=""></a>
                                 </div>
-                            </div>
-                            <div class="col-lg-6 col">
+                                <nav class="main-nav">
+                                    <ul>
+                                        <li class="drop-holder">
+                                            <a href="index.html">Главная</a>
+                                        </li>
+                                        <li class="drop-holder">
+                                            <a href="index.html#education">Справочный материал</a>
+                                        </li>
+                                        <li>
+                                            <a href="contact.html">Контакты</a>
+                                        </li>
+                                    </ul>
+                                </nav>
                                 <div class="header-right">
                                     <ul>
-                                        <li>
+                                        <li title="Serch">
                                             <a href="#exampleModal" class="search-btn bt" data-bs-toggle="modal"
                                                 data-bs-target="#exampleModal">
                                                 <i class="pe-7s-search"></i>
                                             </a>
                                         </li>
-                                        <li class="dropdown d-none d-lg-block">
+                                        <li class="dropdown d-none d-lg-block" title="Account">
                                             <button class="btn btn-link dropdown-toggle ht-btn p-0" type="button"
-                                                id="stickysettingButton" data-bs-toggle="dropdown" aria-label="setting"
+                                                id="settingButton" data-bs-toggle="dropdown" aria-label="setting"
                                                 aria-expanded="false">
                                                 <i class="pe-7s-users"></i>
                                             </button>
-                                            <ul class="dropdown-menu" aria-labelledby="stickysettingButton">
+                                            <ul class="dropdown-menu" aria-labelledby="settingButton">
                                                 <li><a class="dropdown-item" href="my-account.html">Мой аккаунт</a></li>
                                                 <li><a class="dropdown-item"
                                                         href="login-register.html">Логин/Регистрация</a>
                                                 </li>
                                             </ul>
                                         </li>
-
                                         <li class="mobile-menu_wrap d-block d-lg-none">
                                             <a href="#mobileMenu" class="mobile-menu_btn toolbar-btn pl-0">
                                                 <i class="pe-7s-menu"></i>
@@ -200,18 +190,18 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="offcanvas-menu_area">
+                        <!-- <div class="offcanvas-menu_area">
                             <nav class="offcanvas-navigation">
                                 <ul class="mobile-menu">
                                     <li class="menu-item-has-children">
-                                        <a href="#">
+                                        <a href="#header">
                                             <span class="mm-text">Главная
                                             </span>
                                         </a>
                                     </li>
                                     <li class="menu-item-has-children">
-                                        <a href="#">
-                                            <span class="mm-text">Обучение
+                                        <a  href="#education">
+                                            <span class="mm-text">Справочный материал
                                             </span>
                                         </a>
 
@@ -223,7 +213,7 @@
                                     </li>
                                 </ul>
                             </nav>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -254,73 +244,7 @@
                     </div>
                 </div>
             </div>
-            <div class="offcanvas-minicart_wrapper" id="miniCart">
-                <div class="offcanvas-body">
-                    <div class="minicart-content">
-                        <div class="minicart-heading">
-                            <h4 class="mb-0">Shopping Cart</h4>
-                            <a href="#" class="button-close"><i class="pe-7s-close" data-tippy="Close"
-                                    data-tippy-inertia="true" data-tippy-animation="shift-away" data-tippy-delay="50"
-                                    data-tippy-arrow="true" data-tippy-theme="sharpborder"></i></a>
-                        </div>
-                        <ul class="minicart-list">
-                            <li class="minicart-product">
-                                <a class="product-item_remove" href="#"><i class="pe-7s-close" data-tippy="Remove"
-                                        data-tippy-inertia="true" data-tippy-animation="shift-away"
-                                        data-tippy-delay="50" data-tippy-arrow="true"
-                                        data-tippy-theme="sharpborder"></i></a>
-                                <a href="single-product-variable.html" class="product-item_img">
-                                    <img class="img-full" src="assets/images/product/small-size/2-1-70x78.png"
-                                        alt="Product Image">
-                                </a>
-                                <div class="product-item_content">
-                                    <a class="product-item_title" href="single-product-variable.html">American
-                                        Marigold</a>
-                                    <span class="product-item_quantity">1 x $23.45</span>
-                                </div>
-                            </li>
-                            <li class="minicart-product">
-                                <a class="product-item_remove" href="#"><i class="pe-7s-close" data-tippy="Remove"
-                                        data-tippy-inertia="true" data-tippy-animation="shift-away"
-                                        data-tippy-delay="50" data-tippy-arrow="true"
-                                        data-tippy-theme="sharpborder"></i></a>
-                                <a href="single-product-variable.html" class="product-item_img">
-                                    <img class="img-full" src="assets/images/product/small-size/2-2-70x78.png"
-                                        alt="Product Image">
-                                </a>
-                                <div class="product-item_content">
-                                    <a class="product-item_title" href="single-product-variable.html">Black Eyed
-                                        Susan</a>
-                                    <span class="product-item_quantity">1 x $25.45</span>
-                                </div>
-                            </li>
-                            <li class="minicart-product">
-                                <a class="product-item_remove" href="#">
-                                    <i class="pe-7s-close" data-tippy="Remove" data-tippy-inertia="true"
-                                        data-tippy-animation="shift-away" data-tippy-delay="50" data-tippy-arrow="true"
-                                        data-tippy-theme="sharpborder"></i>
-                                </a>
-                                <a href="single-product-variable.html" class="product-item_img">
-                                    <img class="img-full" src="assets/images/product/small-size/2-3-70x78.png"
-                                        alt="Product Image">
-                                </a>
-                                <div class="product-item_content">
-                                    <a class="product-item_title" href="single-product-variable.html">Bleeding Heart</a>
-                                    <span class="product-item_quantity">1 x $30.45</span>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="minicart-item_total">
-                        <span>Subtotal</span>
-                        <span class="ammount">$79.35</span>
-                    </div>
-                    <div class="group-btn_wrap d-grid gap-2">
-                        <a href="cart.html" class="btn btn-dark">View Cart</a>
-                        <a href="checkout.html" class="btn btn-dark">Checkout</a>
-                    </div>
-                </div>
-            </div>
+
             <div class="global-overlay"></div>
         </header>
 
