--- a/login-register.html
+++ b/login-register.html
@@ -219,7 +219,7 @@
                     <div class="modal-content modal-bg-dark">
                         <div class="modal-header">
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
-                                data-tippy="Close" data-tippy-inertia="true" data-tippy-animation="shift-away"
+                                 data-tippy-inertia="true" data-tippy-animation="shift-away"
                                 data-tippy-delay="50" data-tippy-arrow="true" data-tippy-theme="sharpborder">
                                 <span aria-hidden="true">&times;</span>
 
