--- a/cart.html
+++ b/cart.html
@@ -524,9 +524,9 @@ include('bd.html');
                                             — LI).
                                             Кровоснабжение: верхняя и нижняя надчревные, задние межрёберные артерии.
                                         </p>
-                                        <div class="video my-5 container">
+                                        <div class="video my-5 ">
                                             <video controls muted="muted" autoplay="autoplay" loop
-                                                class="container-fluid">
+                                                class="container-fluid" controlsList="nodownload">
                                                 <!-- <source src="./assets/video/Library - 846.mp4" type="video/webm"> -->
                                                 <source src="./assets/video/Library - 846.mp4" type="video/mp4">
                                                 <p>Your browser doesn't support HTML5 video. Here is
@@ -556,9 +556,9 @@ include('bd.html');
                                             — LI).
                                             Кровоснабжение: верхняя и нижняя надчревные, задние межрёберные артерии.
                                         </p>
-                                        <div class="video my-5 container">
+                                        <div class="video my-5 ">
                                             <video controls muted="muted" autoplay="autoplay" loop
-                                                class="container-fluid">
+                                                class="container-fluid" controlsList="nodownload">
                                                 <!-- <source src="./assets/video/Library - 846.mp4" type="video/webm"> -->
                                                 <source src="./assets/video/Library - 846.mp4" type="video/mp4">
                                                 <p>Your browser doesn't support HTML5 video. Here is
@@ -588,9 +588,9 @@ include('bd.html');
                                             — LI).
                                             Кровоснабжение: верхняя и нижняя надчревные, задние межрёберные артерии.
                                         </p>
-                                        <div class="video my-5 container">
+                                        <div class="video my-5 ">
                                             <video controls muted="muted" autoplay="autoplay" loop
-                                                class="container-fluid">
+                                                class="container-fluid" controlsList="nodownload">
                                                 <!-- <source src="./assets/video/Library - 846.mp4" type="video/webm"> -->
                                                 <source src="./assets/video/Library - 846.mp4" type="video/mp4">
                                                 <p>Your browser doesn't support HTML5 video. Here is
