поменял хэдер и убрал страницу с категориями  и убрал подсказку close + запретил скачку видео + подправил меню в мобильной версии

--- a/my-account.html
+++ b/my-account.html
@@ -191,25 +191,32 @@
 
                         <div class="offcanvas-user-info">
                             <h2>Привет, User!</h2>
-                            <ul class="dropdown-wrap" style="padding-left: 83%;">
-                                <li class="dropdown">
-                                    <button class="btn btn-link dropdown-toggle ht-btn p-0" type="button"
-                                        id="settingButtonTwo" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <i class="pe-7s-users"></i>
-                                    </button>
-                                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="settingButtonTwo">
-                                        <li><a class="dropdown-item" href="my-account.html">Мой аккаунт</a></li>
-                                        <li><a class="dropdown-item" href="login-register.html">Логин/Регистрация</a>
+                            <div class="offcanvas-menu_area mt-5">
+                                <nav class="offcanvas-navigation">
+                                    <ul class="mobile-menu">
+                                        <li class="menu-item-has-children">
+                                            <a href="my-account.html">
+                                                <span class="mm-text">Мой аккаунт
+                                                </span>
+                                            </a>
                                         </li>
-                                        <li><a href="#" class="search-btn bt bt-logout">
-                                                Выйти
-                                            </a></li>
+                                        <li class="menu-item-has-children">
+                                            <a href="login-register.html">
+                                                <span class="mm-text">Логин/Регистрация
+                                                </span>
+                                            </a>
+    
+                                        </li>
+                                        <li>
+                                            <a href="#">
+                                                <span class="mm-text">Выйти</span>
+                                            </a>
+                                        </li>
                                     </ul>
-
-                                </li>
-                            </ul>
+                                </nav>
+                            </div>
                         </div>
-                        <!-- <div class="offcanvas-menu_area">
+                        <!-- <div class="offcanvas-menu_area mt-5">
                             <nav class="offcanvas-navigation">
                                 <ul class="mobile-menu">
                                     <li class="menu-item-has-children">
