--- a/cart.html
+++ b/cart.html
@@ -1,10 +1,9 @@
 <!-- <?php
 include('bd.html');
 ?> -->
-
+<!-- ntcn тест -->
 <!DOCTYPE html>
 <html lang="zxx">
-
 <head>
 
     <meta charset="UTF-8">
